feat(winui3): restructure data models and UI bindings
- Updated `App.xaml.cs` to initialize `MainWindow` and `TrayIconManager`.
- Refactored `AppModel` to include `ActiveDrives` and use `UIThreadDispatcher`.
- Changed `_syncs` in `Drive` to `ObservableCollection<Sync>` for better binding.
- Modified `Sync` and `User` classes to use `ObservableObject` and `ObservableCollection`.
- Updated UI in `HomePage.xaml` and `MainWindow.xaml` for improved layout and data binding.
- Added new view model classes for better state management and data binding.
- Included `DynamicData` package for reactive collection management.

--- a/src/gui4/windows/kDrive client/kDrive client/HomePage.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/HomePage.xaml
@@ -9,6 +9,11 @@
     mc:Ignorable="d">
 
     <Grid>
-        <Image Source="/Assets/dev-placeholders/homePagePlaceHolder.png" />
+        <!-- <Image Source="/Assets/dev-placeholders/homePagePlaceHolder.png" /> -->
+        <StackPanel>
+            <TextBox Text="{x:Bind local:HomePage.ViewModel.SelectedDrive.Name, Mode=OneWay}" Foreground="Black"/>
+            <ToggleButton IsChecked="{x:Bind local:HomePage.ViewModel.SelectedDrive.IsActive, Mode=TwoWay}" Content="IsActive"/>
+        </StackPanel>
+
     </Grid>
 </Page>
