feat(winui3): Add back button on main window

--- a/src/gui4/windows/kDrive client/kDrive client/MainWindow.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/MainWindow.xaml
@@ -92,9 +92,10 @@
         <!-- NavigationView -->
         <NavigationView x:Name="nvSample" 
                         Grid.Row="1"
-                        IsBackButtonVisible="Collapsed"
                         PaneDisplayMode="Left"
                         SelectionChanged="nvSample_SelectionChanged"
+                        IsBackEnabled="{x:Bind contentFrame.CanGoBack, Mode=OneWay}"
+                        BackRequested="nvSample_BackRequested"
                         >
 
             <NavigationView.PaneCustomContent>
