fet(winui3): Update page tags

--- a/src/gui4/windows/kDrive client/kDrive client/MainWindow.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/MainWindow.xaml
@@ -133,7 +133,7 @@
                         <SymbolIcon Symbol="Home" Foreground="{ThemeResource AccentAAFillColorDefaultBrush}"/>
                     </NavigationViewItem.Icon>
                 </NavigationViewItem>
-                <NavigationViewItem x:Uid="NavActivity" Tag="SamplePage2" MinHeight="30">
+                <NavigationViewItem x:Uid="NavActivity" Tag="ActivityPage" MinHeight="30">
                     <NavigationViewItem.Icon>
                         <SymbolIcon Symbol="Sync" Foreground="{ThemeResource AccentAAFillColorDefaultBrush}"/>
                     </NavigationViewItem.Icon>
