refactor: Update namespace from kDrive_client to KDriveClient
Refactored the codebase to change the namespace from `kDrive_client` to `KDriveClient`.
This includes updates to class declarations, XML namespaces, and the project file.
Comments and licensing information have been modified for compliance with the GNU General Public License.
Additionally, the log file naming convention in the Logger class has been updated to reflect the new namespace.

--- a/src/gui4/windows/kDrive client/kDrive client/TrayIcon/TrayIconResources.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/TrayIcon/TrayIconResources.xaml
@@ -1,4 +1,5 @@
-﻿<!--
+﻿<?xml version="1.0" encoding="utf-8"?>
+<!--
  * Infomaniak kDrive - Desktop
  * Copyright (C) 2023-2025 Infomaniak Network SA
  *
