--- a/src/gui4/windows/kDrive client/kDrive client/App.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/App.xaml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
  * Infomaniak kDrive - Desktop
  * Copyright (C) 2023-2025 Infomaniak Network SA
@@ -16,12 +17,11 @@
  * along with this program.  If not, see<http://www.gnu.org/licenses/> .
  -->
 
-<?xml version="1.0" encoding="utf-8"?>
 <Application
-    x:Class="kDrive_client.App"
+    x:Class="KDriveClient.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:kDrive_client">
+    xmlns:local="using:KDriveClient">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
