--- a/src/gui4/windows/kDrive client/kDrive client/HomePage.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/HomePage.xaml
@@ -18,10 +18,10 @@
  -->
 
 <Page
-    x:Class="kDrive_client.HomePage"
+    x:Class="KDriveClient.HomePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:kDrive_client"
+    xmlns:local="using:KDriveClient"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
