--- a/src/gui4/windows/kDrive client/kDrive client/MainWindow.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/MainWindow.xaml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
  * Infomaniak kDrive - Desktop
  * Copyright (C) 2023-2025 Infomaniak Network SA
@@ -16,15 +17,14 @@
  * along with this program.  If not, see<http://www.gnu.org/licenses/> .
  -->
 
-<?xml version="1.0" encoding="utf-8"?>
 <Window
-    x:Class="kDrive_client.MainWindow"
+    x:Class="KDriveClient.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:kDrive_client"
+    xmlns:local="using:KDriveClient"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:viewModel="using:kDrive_client.ViewModels"
+    xmlns:viewModel="using:KDriveClient.ViewModels"
     mc:Ignorable="d"
     Title="kDrive client">
 
