feat(converters): add BooleanToVisibilityInverterConverter and link visibility of the kSuiteUpgradeBar to the drive offer
- Introduced a new converter to invert boolean values for visibility.
- Updated drive model to include IsPaidOffer properties.

--- a/src/gui4/windows/kDrive client/kDrive client/Pages/ActivityPage.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/Pages/ActivityPage.xaml
@@ -11,6 +11,8 @@
     <Grid>
         <StackPanel>
             <TextBox Text="{x:Bind ViewModel.SelectedDrive.Name, Mode=OneWay, FallbackValue='NoDrive'}" Foreground="Black"/>
+            <TextBlock Text="{x:Bind ViewModel.SelectedDrive.IsPaidOffer, Mode=OneWay, FallbackValue='-100'}" Foreground="Black"/>
+
             <ToggleButton IsChecked="{x:Bind ViewModel.SelectedDrive.IsActive, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Content="IsActive"/>
         </StackPanel>
 
