refactor: Update project namespace from KDriveClient to KDrive
This commit refactors the project to change the namespace from `KDriveClient` to `KDrive`.
All relevant files, including XAML and C# files, have been updated to reflect this change,
ensuring consistency across the application. The project file has also been modified to
align with the new structure.

--- a/src/gui4/windows/kDrive client/kDrive client/App.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/App.xaml
@@ -18,10 +18,10 @@
  -->
 
 <Application
-    x:Class="KDriveClient.App"
+    x:Class="KDrive.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:KDriveClient">
+    xmlns:local="using:KDrive">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
