--- a/src/gui4/windows/kDrive client/kDrive client/CustomControls/UpdateAvailableBar.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/CustomControls/UpdateAvailableBar.xaml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <UserControl
-    x:Class="KDriveClient.CustomControls.UpdateAvailableBar"
+    x:Class="KDrive.CustomControls.UpdateAvailableBar"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:KDriveClient.CustomControls"
+    xmlns:local="using:KDrive.CustomControls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
