--- a/src/gui4/windows/kDrive client/kDrive client/MainWindow.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/MainWindow.xaml
@@ -18,13 +18,13 @@
  -->
 
 <Window
-    x:Class="KDriveClient.MainWindow"
+    x:Class="KDrive.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:KDriveClient"
+    xmlns:local="using:KDrive"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:viewModel="using:KDriveClient.ViewModels"
+    xmlns:viewModel="using:KDrive.ViewModels"
     mc:Ignorable="d"
     Title="kDrive client">
 
