--- a/src/gui4/windows/kDrive client/kDrive client/Pages/HomePage.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/Pages/HomePage.xaml
@@ -18,14 +18,14 @@
  -->
 
 <Page
-    x:Class="KDriveClient.HomePage"
+    x:Class="KDrive.HomePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:KDriveClient"
+    xmlns:local="using:KDrive"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:controls="using:KDriveClient.CustomControls"
-    xmlns:converters="using:KDriveClient.Converters"
+    xmlns:controls="using:KDrive.CustomControls"
+    xmlns:converters="using:KDrive.Converters"
     mc:Ignorable="d">
     <Page.Resources>
         <converters:BooleanToVisibilityInverterConverter x:Key="BooleanToVisibilityInverterConverter"/>
