style: Add InfomaniakStyles for consistent TextBlock styling
Added a new resource dictionary `InfomaniakStyles.xaml` to define styles for `TextBlock` elements. Updated references in `App.xaml` and modified existing `TextBlock` elements in `KSuiteUpgradeBar.xaml`, `SyncStatusBar.xaml`, `UpdateAvailableBar.xaml`, and `HomePage.xaml` to use these new styles, promoting consistency and maintainability in the UI design.

--- a/src/gui4/windows/kDrive client/kDrive client/CustomControls/KSuiteUpgradeBar.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/CustomControls/KSuiteUpgradeBar.xaml
@@ -52,9 +52,7 @@
                 <!-- Home icon / message -->
                 <TextBlock x:Uid="KSuiteUpgradeBar_message"
                        VerticalAlignment="Center"
-                       FontFamily="Segoe UI"
-                       FontWeight="SemiBold"
-                       FontSize="14"
+                       Style="{StaticResource BodyTextBlockStyle}"
                        Grid.Column="1"/>
 
                 <HyperlinkButton x:Uid="KSuiteUpgradeBar_link" Margin="0,0,20,0" NavigateUri="{x:Bind KSuiteUpgradeLink, Mode=OneTime}" Grid.Column="2" HorizontalAlignment="Right"/>
