chore(winui): Update a missleading comment

--- a/src/gui4/windows/kDrive client/kDrive client/Pages/HomePage.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/Pages/HomePage.xaml
@@ -53,7 +53,7 @@
             Visibility="Visible"
             />
 
-        <!-- Header Success Info -->
+        <!-- Sync Status Bar -->
         <controls:SyncStatusBar Grid.Row="1"/>
 
         <!-- Left main pane -->
